--- a/features/resources/report/report.html
+++ b/features/resources/report/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,6841],[[4,5,6,7,[],[1,11,6829],[],[[8,0,9,[10,11],[1,93,6746],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,11469],[[4,5,6,7,[],[1,11,11457],[],[[8,0,0,[9],[1,92,11376],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test","*../test","*openHome","*/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test/openHome.robot","*../test/openHome.robot","*<p>Essa suite teste o site da amazon.com.br\x3c/p>","*CT 02 - Pesquisa de um Produto","*<p>Esse teste verifica a busca de um produto\x3c/p>","*busca_produtos","*lista_busca"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test","*../test","*openHome","*/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test/openHome.robot","*../test/openHome.robot","*<p>Essa suite teste o site da amazon.com.br\x3c/p>","*CT3 - Adicionar produto na sacola","*adiciona_produto_sacola"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:07","fail":0,"label":"busca_produtos","pass":1,"skip":0},{"elapsed":"00:00:07","fail":0,"label":"lista_busca","pass":1,"skip":0}],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:07","fail":0,"id":"s1-s1","label":"Test.openHome","name":"openHome","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:11","fail":0,"label":"adiciona_produto_sacola","pass":1,"skip":0}],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"Test.openHome","name":"openHome","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1693876161659;
+window.output["baseMillis"] = 1694120228416;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 6845;
+window.output["generated"] = 11472;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
