--- a/features/resources/report/report.html
+++ b/features/resources/report/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,12227],[[4,5,6,7,[],[1,11,12215],[],[[8,0,0,[9],[1,89,12137],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16391],[[4,5,6,7,[],[1,11,16380],[],[[8,0,0,[9],[1,90,16300],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test","*../test","*openHome","*/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test/openHome.robot","*../test/openHome.robot","*<p>Essa suite teste o site da amazon.com.br\x3c/p>","*CT3 - Adicionar produto na sacola","*adiciona_produto_sacola"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test","*../test","*openHome","*/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test/openHome.robot","*../test/openHome.robot","*<p>Essa suite teste o site da amazon.com.br\x3c/p>","*CT04 - fazer login site amazon","*login_sucesso"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:12","fail":0,"label":"adiciona_produto_sacola","pass":1,"skip":0}],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"id":"s1-s1","label":"Test.openHome","name":"openHome","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:16","fail":0,"label":"login_sucesso","pass":1,"skip":0}],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1","label":"Test.openHome","name":"openHome","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1694120712234;
+window.output["baseMillis"] = 1694121917612;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12230;
+window.output["generated"] = 16394;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
